Lab2/Assignment/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CLOSEDIV
    CLOSESPAN
    CLOSESTYLE
    CLOSETABLE
    GARBAGE
    OPENDIV
    OPENSPAN
    OPENSTYLE

Grammar

Rule 0     S' -> start
Rule 1     start -> table
Rule 2     skiptag -> CONTENT skiptag
Rule 3     skiptag -> OPENHREF skiptag
Rule 4     skiptag -> CLOSEHREF skiptag
Rule 5     skiptag -> empty
Rule 6     handleheader -> OPENHEADER CONTENT CLOSEHEADER handleheader
Rule 7     handleheader -> OPENHEADER CONTENT CLOSEHEADER dataCell
Rule 8     handleheader -> empty
Rule 9     dataCell_empty -> empty
Rule 10    dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
Rule 11    dataCell -> OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
Rule 12    dataCell -> OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
Rule 13    dataCell -> OPENDATA OPENHREF CONTENT CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
Rule 14    dataCell -> OPENDATA CLOSEDATA dataCell
Rule 15    dataCell -> OPENDATA CONTENT CLOSEDATA dataCell
Rule 16    dataCell -> OPENDATA CLOSEDATA handleheader
Rule 17    dataCell -> empty
Rule 18    handlerow -> OPENROW handleheader CLOSEROW handlerow
Rule 19    handlerow -> OPENROW dataCell CLOSEROW handlerow
Rule 20    handlerow -> empty
Rule 21    table -> BEGINTABLE skiptag OPENTABLE handlerow
Rule 22    empty -> <empty>
Rule 23    content -> CONTENT
Rule 24    content -> empty

Terminals, with rules where they appear

BEGINTABLE           : 21
CLOSEDATA            : 10 10 10 10 10 10 11 11 11 11 11 11 12 12 12 12 12 12 13 13 13 13 13 13 14 15 16
CLOSEDIV             : 
CLOSEHEADER          : 6 7
CLOSEHREF            : 4 10 10 11 11 12 13 13
CLOSEROW             : 18 19
CLOSESPAN            : 
CLOSESTYLE           : 
CLOSETABLE           : 
CONTENT              : 2 6 7 10 10 10 10 10 10 11 11 11 11 11 11 11 12 12 12 12 12 12 12 13 13 13 13 13 13 13 13 15 23
GARBAGE              : 
OPENDATA             : 10 10 10 10 10 10 11 11 11 11 11 11 12 12 12 12 12 12 13 13 13 13 13 13 14 15 16
OPENDIV              : 
OPENHEADER           : 6 7
OPENHREF             : 3 10 10 11 11 12 13 13
OPENROW              : 18 19
OPENSPAN             : 
OPENSTYLE            : 
OPENTABLE            : 21
error                : 

Nonterminals, with rules where they appear

content              : 
dataCell             : 7 14 15 19
dataCell_empty       : 10 11 12 13
empty                : 5 8 9 17 20 24
handleheader         : 6 16 18
handlerow            : 18 19 21
skiptag              : 2 3 4 21
start                : 0
table                : 1

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . table
    (21) table -> . BEGINTABLE skiptag OPENTABLE handlerow

    BEGINTABLE      shift and go to state 3

    start                          shift and go to state 1
    table                          shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> table .

    $end            reduce using rule 1 (start -> table .)


state 3

    (21) table -> BEGINTABLE . skiptag OPENTABLE handlerow
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . empty
    (22) empty -> .

    CONTENT         shift and go to state 5
    OPENHREF        shift and go to state 6
    CLOSEHREF       shift and go to state 7
    OPENTABLE       reduce using rule 22 (empty -> .)

    skiptag                        shift and go to state 4
    empty                          shift and go to state 8

state 4

    (21) table -> BEGINTABLE skiptag . OPENTABLE handlerow

    OPENTABLE       shift and go to state 9


state 5

    (2) skiptag -> CONTENT . skiptag
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . empty
    (22) empty -> .

    CONTENT         shift and go to state 5
    OPENHREF        shift and go to state 6
    CLOSEHREF       shift and go to state 7
    OPENTABLE       reduce using rule 22 (empty -> .)

    skiptag                        shift and go to state 10
    empty                          shift and go to state 8

state 6

    (3) skiptag -> OPENHREF . skiptag
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . empty
    (22) empty -> .

    CONTENT         shift and go to state 5
    OPENHREF        shift and go to state 6
    CLOSEHREF       shift and go to state 7
    OPENTABLE       reduce using rule 22 (empty -> .)

    skiptag                        shift and go to state 11
    empty                          shift and go to state 8

state 7

    (4) skiptag -> CLOSEHREF . skiptag
    (2) skiptag -> . CONTENT skiptag
    (3) skiptag -> . OPENHREF skiptag
    (4) skiptag -> . CLOSEHREF skiptag
    (5) skiptag -> . empty
    (22) empty -> .

    CONTENT         shift and go to state 5
    OPENHREF        shift and go to state 6
    CLOSEHREF       shift and go to state 7
    OPENTABLE       reduce using rule 22 (empty -> .)

    skiptag                        shift and go to state 12
    empty                          shift and go to state 8

state 8

    (5) skiptag -> empty .

    OPENTABLE       reduce using rule 5 (skiptag -> empty .)


state 9

    (21) table -> BEGINTABLE skiptag OPENTABLE . handlerow
    (18) handlerow -> . OPENROW handleheader CLOSEROW handlerow
    (19) handlerow -> . OPENROW dataCell CLOSEROW handlerow
    (20) handlerow -> . empty
    (22) empty -> .

    OPENROW         shift and go to state 14
    $end            reduce using rule 22 (empty -> .)

    handlerow                      shift and go to state 13
    empty                          shift and go to state 15

state 10

    (2) skiptag -> CONTENT skiptag .

    OPENTABLE       reduce using rule 2 (skiptag -> CONTENT skiptag .)


state 11

    (3) skiptag -> OPENHREF skiptag .

    OPENTABLE       reduce using rule 3 (skiptag -> OPENHREF skiptag .)


state 12

    (4) skiptag -> CLOSEHREF skiptag .

    OPENTABLE       reduce using rule 4 (skiptag -> CLOSEHREF skiptag .)


state 13

    (21) table -> BEGINTABLE skiptag OPENTABLE handlerow .

    $end            reduce using rule 21 (table -> BEGINTABLE skiptag OPENTABLE handlerow .)


state 14

    (18) handlerow -> OPENROW . handleheader CLOSEROW handlerow
    (19) handlerow -> OPENROW . dataCell CLOSEROW handlerow
    (6) handleheader -> . OPENHEADER CONTENT CLOSEHEADER handleheader
    (7) handleheader -> . OPENHEADER CONTENT CLOSEHEADER dataCell
    (8) handleheader -> . empty
    (10) dataCell -> . OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (11) dataCell -> . OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (12) dataCell -> . OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (13) dataCell -> . OPENDATA OPENHREF CONTENT CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (14) dataCell -> . OPENDATA CLOSEDATA dataCell
    (15) dataCell -> . OPENDATA CONTENT CLOSEDATA dataCell
    (16) dataCell -> . OPENDATA CLOSEDATA handleheader
    (17) dataCell -> . empty
    (22) empty -> .

    OPENHEADER      shift and go to state 18
    OPENDATA        shift and go to state 20
    CLOSEROW        reduce using rule 22 (empty -> .)

    handleheader                   shift and go to state 16
    dataCell                       shift and go to state 17
    empty                          shift and go to state 19

state 15

    (20) handlerow -> empty .

    $end            reduce using rule 20 (handlerow -> empty .)


state 16

    (18) handlerow -> OPENROW handleheader . CLOSEROW handlerow

    CLOSEROW        shift and go to state 21


state 17

    (19) handlerow -> OPENROW dataCell . CLOSEROW handlerow

    CLOSEROW        shift and go to state 22


state 18

    (6) handleheader -> OPENHEADER . CONTENT CLOSEHEADER handleheader
    (7) handleheader -> OPENHEADER . CONTENT CLOSEHEADER dataCell

    CONTENT         shift and go to state 23


state 19

    (8) handleheader -> empty .
    (17) dataCell -> empty .

  ! reduce/reduce conflict for CLOSEROW resolved using rule 8 (handleheader -> empty .)
    CLOSEROW        reduce using rule 8 (handleheader -> empty .)

  ! CLOSEROW        [ reduce using rule 17 (dataCell -> empty .) ]


state 20

    (10) dataCell -> OPENDATA . OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (11) dataCell -> OPENDATA . OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (12) dataCell -> OPENDATA . OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (13) dataCell -> OPENDATA . OPENHREF CONTENT CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (14) dataCell -> OPENDATA . CLOSEDATA dataCell
    (15) dataCell -> OPENDATA . CONTENT CLOSEDATA dataCell
    (16) dataCell -> OPENDATA . CLOSEDATA handleheader

    OPENHREF        shift and go to state 24
    CLOSEDATA       shift and go to state 26
    CONTENT         shift and go to state 25


state 21

    (18) handlerow -> OPENROW handleheader CLOSEROW . handlerow
    (18) handlerow -> . OPENROW handleheader CLOSEROW handlerow
    (19) handlerow -> . OPENROW dataCell CLOSEROW handlerow
    (20) handlerow -> . empty
    (22) empty -> .

    OPENROW         shift and go to state 14
    $end            reduce using rule 22 (empty -> .)

    handlerow                      shift and go to state 27
    empty                          shift and go to state 15

state 22

    (19) handlerow -> OPENROW dataCell CLOSEROW . handlerow
    (18) handlerow -> . OPENROW handleheader CLOSEROW handlerow
    (19) handlerow -> . OPENROW dataCell CLOSEROW handlerow
    (20) handlerow -> . empty
    (22) empty -> .

    OPENROW         shift and go to state 14
    $end            reduce using rule 22 (empty -> .)

    handlerow                      shift and go to state 28
    empty                          shift and go to state 15

state 23

    (6) handleheader -> OPENHEADER CONTENT . CLOSEHEADER handleheader
    (7) handleheader -> OPENHEADER CONTENT . CLOSEHEADER dataCell

    CLOSEHEADER     shift and go to state 29


state 24

    (10) dataCell -> OPENDATA OPENHREF . CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (11) dataCell -> OPENDATA OPENHREF . CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (12) dataCell -> OPENDATA OPENHREF . CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (13) dataCell -> OPENDATA OPENHREF . CONTENT CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty

    CONTENT         shift and go to state 30


state 25

    (15) dataCell -> OPENDATA CONTENT . CLOSEDATA dataCell

    CLOSEDATA       shift and go to state 31


state 26

    (14) dataCell -> OPENDATA CLOSEDATA . dataCell
    (16) dataCell -> OPENDATA CLOSEDATA . handleheader
    (10) dataCell -> . OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (11) dataCell -> . OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (12) dataCell -> . OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (13) dataCell -> . OPENDATA OPENHREF CONTENT CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (14) dataCell -> . OPENDATA CLOSEDATA dataCell
    (15) dataCell -> . OPENDATA CONTENT CLOSEDATA dataCell
    (16) dataCell -> . OPENDATA CLOSEDATA handleheader
    (17) dataCell -> . empty
    (6) handleheader -> . OPENHEADER CONTENT CLOSEHEADER handleheader
    (7) handleheader -> . OPENHEADER CONTENT CLOSEHEADER dataCell
    (8) handleheader -> . empty
    (22) empty -> .

    OPENDATA        shift and go to state 20
    OPENHEADER      shift and go to state 18
    CLOSEROW        reduce using rule 22 (empty -> .)

    dataCell                       shift and go to state 32
    handleheader                   shift and go to state 33
    empty                          shift and go to state 34

state 27

    (18) handlerow -> OPENROW handleheader CLOSEROW handlerow .

    $end            reduce using rule 18 (handlerow -> OPENROW handleheader CLOSEROW handlerow .)


state 28

    (19) handlerow -> OPENROW dataCell CLOSEROW handlerow .

    $end            reduce using rule 19 (handlerow -> OPENROW dataCell CLOSEROW handlerow .)


state 29

    (6) handleheader -> OPENHEADER CONTENT CLOSEHEADER . handleheader
    (7) handleheader -> OPENHEADER CONTENT CLOSEHEADER . dataCell
    (6) handleheader -> . OPENHEADER CONTENT CLOSEHEADER handleheader
    (7) handleheader -> . OPENHEADER CONTENT CLOSEHEADER dataCell
    (8) handleheader -> . empty
    (10) dataCell -> . OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (11) dataCell -> . OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (12) dataCell -> . OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (13) dataCell -> . OPENDATA OPENHREF CONTENT CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (14) dataCell -> . OPENDATA CLOSEDATA dataCell
    (15) dataCell -> . OPENDATA CONTENT CLOSEDATA dataCell
    (16) dataCell -> . OPENDATA CLOSEDATA handleheader
    (17) dataCell -> . empty
    (22) empty -> .

    OPENHEADER      shift and go to state 18
    OPENDATA        shift and go to state 20
    CLOSEROW        reduce using rule 22 (empty -> .)

    handleheader                   shift and go to state 35
    dataCell                       shift and go to state 36
    empty                          shift and go to state 19

state 30

    (10) dataCell -> OPENDATA OPENHREF CONTENT . CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (11) dataCell -> OPENDATA OPENHREF CONTENT . CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (12) dataCell -> OPENDATA OPENHREF CONTENT . CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (13) dataCell -> OPENDATA OPENHREF CONTENT . CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty

    CLOSEHREF       shift and go to state 38
    CONTENT         shift and go to state 37


state 31

    (15) dataCell -> OPENDATA CONTENT CLOSEDATA . dataCell
    (10) dataCell -> . OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (11) dataCell -> . OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (12) dataCell -> . OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (13) dataCell -> . OPENDATA OPENHREF CONTENT CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (14) dataCell -> . OPENDATA CLOSEDATA dataCell
    (15) dataCell -> . OPENDATA CONTENT CLOSEDATA dataCell
    (16) dataCell -> . OPENDATA CLOSEDATA handleheader
    (17) dataCell -> . empty
    (22) empty -> .

    OPENDATA        shift and go to state 20
    CLOSEROW        reduce using rule 22 (empty -> .)

    dataCell                       shift and go to state 39
    empty                          shift and go to state 40

state 32

    (14) dataCell -> OPENDATA CLOSEDATA dataCell .

    CLOSEROW        reduce using rule 14 (dataCell -> OPENDATA CLOSEDATA dataCell .)


state 33

    (16) dataCell -> OPENDATA CLOSEDATA handleheader .

    CLOSEROW        reduce using rule 16 (dataCell -> OPENDATA CLOSEDATA handleheader .)


state 34

    (17) dataCell -> empty .
    (8) handleheader -> empty .

  ! reduce/reduce conflict for CLOSEROW resolved using rule 8 (handleheader -> empty .)
    CLOSEROW        reduce using rule 8 (handleheader -> empty .)

  ! CLOSEROW        [ reduce using rule 17 (dataCell -> empty .) ]


state 35

    (6) handleheader -> OPENHEADER CONTENT CLOSEHEADER handleheader .

    CLOSEROW        reduce using rule 6 (handleheader -> OPENHEADER CONTENT CLOSEHEADER handleheader .)


state 36

    (7) handleheader -> OPENHEADER CONTENT CLOSEHEADER dataCell .

    CLOSEROW        reduce using rule 7 (handleheader -> OPENHEADER CONTENT CLOSEHEADER dataCell .)


state 37

    (11) dataCell -> OPENDATA OPENHREF CONTENT CONTENT . CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (12) dataCell -> OPENDATA OPENHREF CONTENT CONTENT . CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (13) dataCell -> OPENDATA OPENHREF CONTENT CONTENT . CONTENT CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty

    CLOSEHREF       shift and go to state 42
    CONTENT         shift and go to state 41


state 38

    (10) dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF . CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty

    CLOSEDATA       shift and go to state 43


state 39

    (15) dataCell -> OPENDATA CONTENT CLOSEDATA dataCell .

    CLOSEROW        reduce using rule 15 (dataCell -> OPENDATA CONTENT CLOSEDATA dataCell .)


state 40

    (17) dataCell -> empty .

    CLOSEROW        reduce using rule 17 (dataCell -> empty .)


state 41

    (13) dataCell -> OPENDATA OPENHREF CONTENT CONTENT CONTENT . CLOSEHREF CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty

    CLOSEHREF       shift and go to state 44


state 42

    (11) dataCell -> OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF . CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (12) dataCell -> OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF . CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty

    CLOSEDATA       shift and go to state 45


state 43

    (10) dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA . OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty

    OPENDATA        shift and go to state 46


state 44

    (13) dataCell -> OPENDATA OPENHREF CONTENT CONTENT CONTENT CLOSEHREF . CLOSEDATA OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty

    CLOSEDATA       shift and go to state 47


state 45

    (11) dataCell -> OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA . OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (12) dataCell -> OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA . OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty

    OPENDATA        shift and go to state 48


state 46

    (10) dataCell -> OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA . OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty

    OPENHREF        shift and go to state 49


state 47

    (13) dataCell -> OPENDATA OPENHREF CONTENT CONTENT CONTENT CLOSEHREF CLOSEDATA . OPENDATA OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty

    OPENDATA        shift and go to state 50


state 48

    (11) dataCell -> OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA . OPENHREF CONTENT CLOSEHREF CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty
    (12) dataCell -> OPENDATA OPENHREF CONTENT CONTENT CLOSEHREF CLOSEDATA OPENDATA . CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA OPENDATA CONTENT CLOSEDATA dataCell_empty

    OPENHREF        shift and go to state 51
    CONTENT         shift and go to state 52


state 49
